PROJECT(revolver_master)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(NET_MANAGER_LIB revolver_master)
SET(CMAKE_AR ar)

SET(LIB_VERSION 0.0.1)
IF(WIN32)
	MESSAGE(STATUS "windows do not need install")
ELSE(WIN32)
	SET(CMAKE_INSTALL_PREFIX /usr/local/${NET_MANAGER_LIB}-${LIB_VERSION})
ENDIF(WIN32)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_SUBDIRECTORY(src lib)
