IF(WIN32)
	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
	ADD_DEFINITIONS(-D_REENTRANT)

	LINK_LIBRARIES(Ws2_32.lib) 
ELSE(WIN32) 
	ADD_DEFINITIONS(-g -o3 -W -Wall -Wno-invalid-offsetof -fPIC 
	-D_REENTRANT) 
ENDIF(WIN32)


FILE(GLOB_RECURSE DIR_HEADERS "*.h")
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

IF(WIN32)
	ADD_LIBRARY(revolver STATIC ${DIR_SRCS} ${DIR_HEADERS})
ELSE(WIN32)
	ADD_LIBRARY(revolver SHARED ${DIR_SRCS})
ENDIF(WIN32)
SET_TARGET_PROPERTIES(revolver PROPERTIES VERSION 0.0.1)

IF(WIN32)

ELSE(WIN32)
	INSTALL(TARGETS revolver LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
	INSTALL(DIRECTORY ./ DESTINATION 
		${CMAKE_INSTALL_PREFIX}/include PATTERN "*.cpp" EXCLUDE PATTERN ".svn" EXCLUDE PATTERN "gen" EXCLUDE PATTERN "*.txt" EXCLUDE)
ENDIF(WIN32)		